@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-10-26T08:23:35Z",
-  "count_outdated" : 156,
-  "uniques_outdated" : 111,
-  "count" : 157,
-  "uniques" : 112,
+  "timestamp" : "2022-12-07T16:20:51Z",
+  "count_outdated" : 157,
+  "uniques_outdated" : 112,
+  "count" : 159,
+  "uniques" : 113,
   "clones" : [
     {
-      "timestamp": "2022-10-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "timestamp": "2022-12-07T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
